--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -10,24 +10,24 @@ lantoniotrento@gmail.com
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ page.title }}</title>
     {% if page.tagline %}<meta name="description" content="{{ page.tagline }}">{% endif %}
-    <meta name="author" content="{{ site.author.name }}">    
+    <meta name="author" content="{{ site.author.name }}">
     {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
     {% if page.canonical %}<link rel="canonical" href="{{ page.canonical }}"/>{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
 
     <!--Google Font link-->
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
- <!--Helium css-->
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/animate.css">
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/font-awesome.min.css">
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/jasny-bootstrap.min.css">
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/main.css">
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/owl.carousel.css">
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/owl.theme.css">
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/responsive.css">
-        <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/scrolling-nav.css">	  
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
+    <!--Helium css-->
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/animate.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/jasny-bootstrap.min.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/main.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/owl.theme.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/responsive.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/scrolling-nav.css">
+    <link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/native.css">
 
 	<!-- CSS loaded by the children page -->
         {% if page.css %}<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/custom/{{ page.css }}" />{% endif %}
