--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,13 +3,12 @@
     border-left: 0;
 }
 
-
 .navbar {
-    padding: 10px !important;
+    padding: 0px !important;
 }
 
 .navbar-brand img {
-    width: 50px;
+    width: auto;
     padding-right: 10px;
 }
 .brand {
