--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,10 @@
+li {
+    margin-left: 35px;
+}
+
+.header-style-2 {
+    padding-top: 0px !important;
+}
 
 .default-footer {
     padding-bottom: 30px !important;
