--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,7 @@
+.blog-post h3 {
+    font-size: 30px !important;
+}
+
 li {
     margin-left: 35px;
 }
@@ -30,7 +34,7 @@ li {
 }
 
 .blog h2 {
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 30px;
 }
 
