--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,12 @@
+.blog table {
+    margin-bottom: 10px;
+}
+
+.blog table th, td {
+    border: 1px solid black;
+    font-weight: normal;
+}
+
 .blog-post h3 {
     font-size: 30px !important;
 }
