Add new logo and toc

--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -17,10 +17,13 @@
 <!-- navbar-default -->
 <nav class="navbar navbar-toggleable-sm navbar-light bg-default">
     <div class="container">
-        <a class="navbar-brand" href="{{ BASE_PATH }}/"><img src="{{ BASE_PATH }}/assets/img/tyler.png" alt="">
-            <span class="brand">
-                InterData Innovation Labs
-            </span></a>
+        <div class="collapse navbar-collapse justify-content-end">
+            <a class="navbar-brand" href="{{ BASE_PATH }}/">
+                <img src="{{ BASE_PATH }}/assets/img/logo_small.png" alt="">
+                <span class="brand">
+                    InterData Innovation Labs
+                </span>
+            </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa fa-bars"></i>
         </button>
