--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,52 @@
+.toc {
+    border: 1px solid #a2a9b1;
+    background-color: #f8f9fa;
+    display: table;
+    padding: 7px;
+    padding-right: 15px;
+    padding-bottom: 0px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.navbar-nav {
+    margin-top: 10px;
+}
+.navbar {
+    padding: 0px !important;
+}
+
+.navbar-brand img {
+    width: auto;
+    padding-right: 10px;
+}
+
+.brand {
+    color: #999 !important;
+}
+
+.bg-default {
+    background: white !important;
+}
+
+.toc h1 {
+    display: block;
+    color: #727272;
+    font: bold;
+    font: 16px "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.toc a {
+    color: #39c !important;
+    text-doecoration: none;
+    background-color: transparent;
+    display: table-cell;
+}
+
+.blog .row {
+    margin-top: -40px;
+}
+
 .header-style-2 img {
     width: auto !important;
 }
@@ -38,19 +87,6 @@ li {
 .highlight pre {
     overflow: hidden;
     border-left: 0;
-}
-
-.navbar {
-    padding: 0px !important;
-}
-
-.navbar-brand img {
-    width: auto;
-    padding-right: 10px;
-}
-
-.brand {
-    color: #999 !important;
 }
 
 .blog h2 {
