--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,7 +9,12 @@
     margin-bottom: 20px;
 }
 
-
+.navbar-nav {
+    margin-top: 10px;
+}
+.navbar {
+    padding: 0px !important;
+}
 
 .navbar-brand img {
     width: auto;
