--- a/_includes/themes/bootstrap/blog.html
+++ b/_includes/themes/bootstrap/blog.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="col-sm-12 col-md-3">
-          {% include side-bar.html %}
+          {% include company-side-bar.html %}
         </div>
       </div>
      </div>
