--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,7 +3,7 @@ layout: blog
 ---
 {% include JB/setup %}
 
-{% assign tag_name = page.name | remove: ".html" %}
+{% assign tag_name = page.name | remove: ".md" %}
 
 <div class="tag">
     <h1>
@@ -14,7 +14,8 @@ layout: blog
 {% for post in site.posts %}
 {% if post.tags != empty %}
 {% for tag in post.tags %}
-{% if tag == tag_name %}
+{% assign tag1 = tag | slugify %}
+{% if tag1 == tag_name %}
 <div class="blog-block post-content-area">
 	  {% if post.img %}
     <img src="{{ BASE_PATH }}/assets/images/{{ post.img }}" alt="{{ post.title }} image">
