Fix for mobile phone

--- a/_includes/company-side-bar.html
+++ b/_includes/company-side-bar.html
@@ -1,4 +1,4 @@
-<div class="blog-block about-sidebar-widget">
+<div class="side-bar blog-block about-sidebar-widget">
     <img src="{{ BASE_PATH }}/assets/img/tyler.png">
     <img src="{{ BASE_PATH }}/assets/img/logo_small.png">
     <p>A brand new collaboration between two individuals with a shared passion for programming and machine learning, InterData Innovation Labs (i2Labs) starts out with a mission to make programming for young students accessible and relevant.</p>
