--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -27,7 +27,7 @@ strong, h1, h2, h3 a {
 }
 
 .brand {
-    font-size: 20px !important;
+    font-size: 15px !important;
 }
 
 .toc {
@@ -130,6 +130,11 @@ li {
 }
 
 .blog img {
+    width: 100%;
+    max-width: 600px;
+}
+
+.side-bar img {
     width: auto;
 }
 
