--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,6 +48,11 @@ strong, h1, h2, h3 a {
     padding: 0px !important;
 }
 
+.navbar-brand {
+    margin-right: 0px !important;
+    padding-right: 0px !important;
+}
+
 .navbar-brand img {
     width: auto;
     padding-right: 10px;
