--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -78,7 +78,7 @@ strong, h1, h2, h3 a {
 }
 
 .header-style-2 img {
-    width: auto !important;
+    width: 100% !important;
 }
 
 .blog table {
@@ -106,7 +106,7 @@ li {
 }
 
 .header-style-2 {
-    padding-top: 0px !important;
+    padding-top: 10px !important;
 }
 
 .default-footer {
@@ -129,8 +129,9 @@ li {
 }
 
 .blog img {
-    width: 100%;
-    max-width: 600px;
+    margin-top: 10px;
+    width: 70%;
+    height: auto;
 }
 
 .side-bar img {
