--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,15 @@
+.column {
+    float: left;
+    width: 25%;
+    padding: 2px;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
 .tag {
     padding-bottom: 15px;
 }
@@ -99,6 +111,7 @@ strong, h1, h2, h3 a {
 .blog h3 {
     padding-top: 10px;
     padding-bottom: 10px;
+    color: #4682b4 !important;
 }
 
 .blog-post h3 {
