--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -10,6 +10,7 @@
             {% if site.author.twitter %}<a href="https://twitter.com/{{ site.author.twitter }}"><i class="fa fa-twitter"></i></a>{% endif %}
             {% if site.author.linkedin %}<a href="https://www.linkedin.com/in/{{ site.author.linkedin }}/"><i class="fa fa-linkedin"></i></a>{% endif %}
             {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-instagram"></i></a>{% endif %}
+            {% if site.author.github %}<a href="https://www.github.com/{{ site.author.github }}/"><i class="fa fa-github"></i></a>{% endif %}
         </span>
     </p>
 </div>
