--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -36,7 +36,10 @@
     <!-- CSS loaded by the children page -->
     {% if page.css %}<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/custom/{{ page.css }}" />{% endif %}
 
+    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:description" content="{{ page.tagline }}">
     <meta property="og:image" content="{{ BASE_PATH }}/assets/images/logo.png">
+    <meta property="og:url" content="{{ BASE_PATH }}">
     
     <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon" />
 
@@ -59,7 +62,7 @@
     {% endif %}
   </head>
   <body>
-  <div class="wrapper">
+  <div class="wrapper">	  	  
       <!--Home page style--> 
       {% include themes/bootstrap/nav-bar.html %}  
       {{ content }}
