--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -38,9 +38,9 @@
 
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:description" content="{{ page.tagline }}">
-    <meta property="og:image" content="{{ BASE_PATH }}/assets/images/logo.png">
+    <meta property="og:image" content="https://kokatoo.github.io/assets/images/logo.png">
     <meta property="og:url" content="{{ BASE_PATH }}">
-    
+
     <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon" />
 
 	<!--[if IE]>
