--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -38,6 +38,7 @@
 
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:description" content="{{ page.tagline }}">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://kokatoo.github.io/assets/images/logo.png">
     <meta property="og:url" content="{{ BASE_PATH }}">
 
