Change profile pic

--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -1,5 +1,5 @@
 <div class="blog-block about-sidebar-widget">
-    <img src="{{ BASE_PATH }}/assets/img/{{ site.author.image }}">
+    <img src="{{ BASE_PATH }}/assets/img/{{ site.author.penguin }}">
     <h4><a href="{{ site.author.site }}">{{ site.author.name }}</a></h4>
     <p>{{ site.author.description }}</p>
 </div>
