--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -1,5 +1,7 @@
 <div class="blog-block about-sidebar-widget">
-    <img src="{{ BASE_PATH }}/assets/img/{{ site.author.penguin }}">
-    <h4><a href="{{ site.author.site }}">{{ site.author.name }}</a></h4>
-    <p>{{ site.author.description }}</p>
+    <a href="{{ BASE_PATH }}/about.html#jason">
+        <img src="{{ BASE_PATH }}/assets/img/{{ site.author.penguin }}">
+        <h4><a href="{{ site.author.site }}">{{ site.author.name }}</a></h4>
+        <p>{{ site.author.description }}</p>
+    </a>
 </div>
