--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -3,7 +3,7 @@
         <span class="left">
             <a href="#"><i class="fa fa-map-marker"></i>Singapore</a>
             <a href="#"><i class="fa fa-mobile-phone"></i>+65 86668554</a>
-            <a href="#"><i class="fa fa-envelope"></i>info@i2labs.page</a>
+            <a href="#"><i class="fa fa-envelope"></i>kokatoo1948@gmail.com</a>
         </span>
         <span class="right">
             {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-facebook"></i></a>{% endif %}
