Add css contrasts

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -171,6 +171,11 @@ li {
     margin-top: 10px;
     width: 70%;
     height: auto;
+    image-rendering: -moz-crisp-edges;         /* Firefox */
+    image-rendering:   -o-crisp-edges;         /* Opera */
+    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
 }
 
 .side-bar img {
